# starkForQuasiStatics

./: CLAUDE.md  README.md
pystark/cpp/core/: pystark_Settings.cpp
stark/: CMakeLists.txt
stark/src/core/: Callbacks.h  NewtonsMethod.cpp  NewtonsMethod.h  Settings.h  Stark.cpp  Stark.h
stark/src/models/deformables/: PointDynamics.cpp  PointDynamics.h  deformable_tools.cpp
stark/src/models/deformables/line/: EnergySegmentStrain.cpp
stark/src/models/deformables/point/: EnergyLumpedInertia.cpp  EnergyPrescribedPositions.cpp
stark/src/models/deformables/surface/: EnergyDiscreteShells.cpp  EnergyTriangleStrain.cpp
stark/src/models/deformables/volume/: EnergyTetStrain.cpp
stark/src/models/interactions/: EnergyAttachments.cpp  EnergyFrictionalContact.cpp  EnergyFrictionalContact.h
stark/src/models/rigidbodies/: EnergyRigidBodyConstraints.cpp  EnergyRigidBodyInertia.cpp  RigidBodyDynamics.cpp  RigidBodyDynamics.h
